--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -1,42 +1,50 @@
 <div id="content_wrapper">
   <div id="left_sidebar">
-
+    <div id="left_nav">
+      <ul>
+        <li><a ng-click="scrollTo('t0')"> 研究の世界入門講座</a></li>
+      </ul>
+    </div>
   </div>
   <div id="right_contentWrapper">
     <div class="content">
-      <h1 class="contentTitle" id="t4">講座</h1>
-      <p>準備中</p>
-      <!--
-      <h3>初年次情報教育の詳細</h3>
-      <ul style="list-style-type: none;">
-        <li>会場 ： 吉田南1号館1共02（地下1階）</li>
-        <li>時間 ： 18時30分 ～ 20時00分</li>
-        <li>詳細 ： <a href="https://sites.google.com/site/fyeinfomatics/"><u>初年次情報教育ホームページ</u></a></li>
-        <li>1. 2012年4月25日 情報と知財 情報学研究科　田中克己　</li>
-        <li>2. 2012年5月 9日 情報の分析 情報教育推進センター　浅井泰仁</li>
-        <li>3. 2012年5月16日 情報の表現 総合人間学部　日置尋久    <a href="http://www.youtube.com/watch?v=g5NtV3Pz2hU"><u>講義ビデオ</u></a></li>
-        <li>4. 2012年5月23日 科学的方法 高等教育研究開発推進機構　小山田耕二    <a href="http://www.youtube.com/watch?v=6BUFZe6C6BM"><u>講義ビデオ</u></a></li>
-        <li>5. 2012年5月30日 学術情報の探索 附属図書館教職員　赤澤久弥    <a href="http://www.youtube.com/watch?v=EQI88i1y-7s"><u>講義ビデオ</u></a></li>
-      </ul>
-      <h3><a href="archiveSummer.html"><u>夏休み集中講座（研究の世界入門B）</u></a>　　講座サマリーは<a href="data/シンポ九月集中講座.pdf"><u>こちら</u></a></h3>
-      <ul style="list-style-type: none;">
-        <li>会場 ： 吉田南1号館1共23</li>
-        <li>時間 ： 2012年9月3日(月)―2012年9月7日(金)　3・4・5限</li>
-        <li>詳細 ： <a href="data/lecture.pdf"><u>全学共通教育科目「研究の世界入門B」(夏季集中講座)(PDF)</u></a></li>
-        <li>9/3（月）ガイダンス・科学的方法について<br>
-        9/4（火）英語論文執筆 1<br>
-        9/5（水）英語論文執筆 2<br>
-        9/6（木）英語論文執筆 3<br>
-        9/7（金）英語論文執筆 4 または英語口頭発表<br>
-        </li>
-      </ul>
-      <h3><a href="archiveOctover.html"><u>英語プレゼンテーション講座</u></a></h3>
-      <ul style="list-style-type: none;">
-        <li>会場 ： 吉田南1号館1共23</li>
-        <li>時間 ： 10月毎週木曜日 ６限(18:15 ~ 19:45)</li>
-        <li>講義内容 ： <a href="resource/Presentation Skills.pdf" target="_blank"><u>Presentation Skills.pdf</u></a></li>
-      </ul>
-      -->
+      <h1 class="contentTitle" id="t0">研究の世界入門講座</h1>
+      <div>
+        <p>会場 ： 吉田南一号館 1共25教室</p>
+        <p>時間 ： 18時15分 ～ 19時45分</p>
+        <ol>
+          <li>
+            <div>
+              <h3>5月14日(水) テーマを探そう</h3>
+              <p>グループでの自己紹介、研究の進め方</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>5月21日(水) 論文って何？</h3>
+              <p>科学的手法、仮説検証法、論文の書き方</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>5月28日(水) インタビューに挑戦</h3>
+              <p>調査(アンケート・インタビューなど)について</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>6月4日(水) データはどうまとめるか</h3>
+              <p>グラフ表示、Excelを用いた分析法など</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>6月11日(水) 情報を集めよう</h3>
+              <p>京大の論文検索システム等での情報検索法</p>
+            </div>
+          </li>
+        </ol>
+      </div>
     </div>
   </div>
 </div>
