Update class-archive page

--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -17,18 +17,21 @@
             <div>
               <h3>5月14日(水) テーマを探そう</h3>
               <p>グループでの自己紹介、研究の進め方</p>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/l3ceJCm_-pQ" frameborder="0" allowfullscreen></iframe>
             </div>
           </li>
           <li>
             <div>
               <h3>5月21日(水) 論文って何？</h3>
               <p>科学的手法、仮説検証法、論文の書き方</p>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/Guf2iPml05I" frameborder="0" allowfullscreen></iframe>
             </div>
           </li>
           <li>
             <div>
               <h3>5月28日(水) インタビューに挑戦</h3>
               <p>調査(アンケート・インタビューなど)について</p>
+              <p>参考情報: <a href="http://collaboegm.appspot.com/">評価グリッド法支援ソフトウェア E-Grid</a></p>
             </div>
           </li>
           <li>
