--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -10,7 +10,7 @@
     <div class="content">
       <h1 class="contentTitle" id="t0">研究の世界入門講座</h1>
       <div>
-        <p>会場 ： 吉田南一号館 1共25教室</p>
+        <p>会場 ： 吉田南一号館 1共23教室 (第1〜3回は1共25教室)</p>
         <p>時間 ： 18時15分 ～ 19時45分</p>
         <ol>
           <li>
