--- a/sympo2014/partials/home.html
+++ b/sympo2014/partials/home.html
@@ -27,6 +27,7 @@
   <div id="right_contentWrapper">
     <div class="content">
       <h1 id="t0" class="contentTitle">お知らせ</h1>
+      <p><strong><a href="#/class-archive#t0">研究の世界入門講座</a> 第4回、第5回は1共23(212)に教室が変更になります。(2014.5.29)</strong></p>
       <p><strong>5月14日から<a href="#/class-archive#t0">研究の世界入門講座</a>が開催されます。(2014.5.7)</strong></p>
       <p><strong>シンポジウムへの参加登録を<a href="https://docs.google.com/forms/d/1qRTIC1pq8cnQMJehWN_mhMg8r3QoZYjM8lrlTPI05Ys/viewform">こちら</a>から受け付けています。(2014.5.7)</strong></p>
       <p><strong>シンポ2014HPがリリースしました。(2014.3.11)</strong></p>
