--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -40,6 +40,7 @@
               <p>グラフ表示、Excelを用いた分析法など</p>
               <p><a href="data/研究の世界入門04/data1.xlsx">演習データ1</a></p>
               <p><a href="data/研究の世界入門04/data2.xlsx">演習データ2</a></p>
+              <p><a href="data/研究の世界入門04/data3.xlsx">演習データ3</a></p>
             </div>
           </li>
           <li>
