--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -31,6 +31,7 @@
             <div>
               <h3>5月28日(水) インタビューに挑戦</h3>
               <p>調査(アンケート・インタビューなど)について</p>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/iLFHzU9fEIY" frameborder="0" allowfullscreen></iframe>
               <p>参考情報: <a href="http://collaboegm.appspot.com/">評価グリッド法支援ソフトウェア E-Grid</a></p>
             </div>
           </li>
@@ -38,6 +39,7 @@
             <div>
               <h3>6月4日(水) データはどうまとめるか</h3>
               <p>グラフ表示、Excelを用いた分析法など</p>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/Q36zOr1BvCo" frameborder="0" allowfullscreen></iframe>
               <p><a href="data/研究の世界入門04/data1.xlsx">演習データ1</a></p>
               <p><a href="data/研究の世界入門04/data2.xlsx">演習データ2</a></p>
               <p><a href="data/研究の世界入門04/data3.xlsx">演習データ3</a></p>
