--- a/sympo2014/partials/info.html
+++ b/sympo2014/partials/info.html
@@ -2,7 +2,9 @@
   <div class="content">
     <div style="text-align: left; width: 730px; margin: 20px auto 20px auto;">
       <h1 id="t0" class="contentTitle">第五回全学共通教育国際学生シンポジウムお知らせ</h1>
-
+      <p ng-repeat="info in informations">
+        <strong><span ng-bind-html="info.content"></span>({{info.date | date:'yyyy.M.d'}})</strong>
+      </p>
       <p style="font-size: small;">
       連絡先：<a href="mailto:sympo2014@viz.media.kyoto-u.ac.jp">sympo2014@viz.media.kyoto-u.ac.jp</a>
       </p>
