--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -2,11 +2,16 @@
   <div id="left_sidebar">
     <div id="left_nav">
       <ul>
+        <li><a ng-click="scrollTo('t1')"> 夏期集中講座</a></li>
         <li><a ng-click="scrollTo('t0')"> 研究の世界入門講座</a></li>
       </ul>
     </div>
   </div>
   <div id="right_contentWrapper">
+    <div class="content">
+      <h1 class="contentTitle" id="t1">夏期集中講座</h1>
+      <p>9月8日(月)から9月12日(金)の2限から4限に開講されます。</p>
+    </div>
     <div class="content">
       <h1 class="contentTitle" id="t0">研究の世界入門講座</h1>
       <div>
@@ -49,6 +54,7 @@
             <div>
               <h3>6月11日(水) 情報を集めよう</h3>
               <p>京大の論文検索システム等での情報検索法</p>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/ByXOOFrtEwM" frameborder="0" allowfullscreen></iframe>
             </div>
           </li>
         </ol>
