--- a/sympo2014/partials/requirements.html
+++ b/sympo2014/partials/requirements.html
@@ -18,17 +18,17 @@
       <li>参加申し込み： 2014年7月末頃</li>
       <li>投稿締め切り： 2014年9月末頃</li>
       <li>査読結果通知： 2014年10月初旬</li>
-      <li>シンポジウム開催日： 11祭中</li>
+      <li>シンポジウム開催日： 11月21日(金)</li>
       ＊詳細や、関連講義などの日程は、順次ご連絡します。<br>	<br>
 
 
       論文タイトル：任意<br>
-      参加申し込み：<a href="https://docs.google.com/spreadsheet/viewform?pli=1&formkey=dG9odmtLcTNRc3hpOTJ3VTBUZmxLM3c6MQ#gid=0"><u>登録フォーム</u></a><br>
+      参加申し込み：<a href="{{formUrl}}"><u>登録フォーム</u></a><br>
       投稿先：<u>全学共通教育国際学生シンポジウムOJSシステム(準備中)</u><br>
       その他：論文の提出書式と注意事項を確認してください。<br>
 
 
-      主催：京都大学高等教育研究開発推進機構・第三回全学共通教育国際学生シンポジウム実行委員会<br>
+      主催：京都大学国際高等教育院・第五回全学共通教育国際学生シンポジウム実行委員会<br>
       連絡先：<a href="mailto:sympo2014@viz.media.kyoto-u.ac.jp">sympo2014@viz.media.kyoto-u.ac.jp</a><br>
       ホームページ：<a href="http://www.viz.media.kyoto-u.ac.jp/sympo2014/">http://www.viz.media.kyoto-u.ac.jp/sympo2014/index.html</a><br>
 
