Update important date

--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -3,6 +3,7 @@
     <div id="left_nav">
       <ul>
         <li><a ng-click="scrollTo('t1')"> 夏期集中講座</a></li>
+        <li><a ng-click="scrollTo('t2')"> 説明会</a></li>
         <li><a ng-click="scrollTo('t0')"> 研究の世界入門講座</a></li>
       </ul>
     </div>
@@ -11,6 +12,14 @@
     <div class="content">
       <h1 class="contentTitle" id="t1">夏期集中講座</h1>
       <p>9月8日(月)から9月12日(金)の2限から4限に開講されます。</p>
+    </div>
+    <div class="content">
+      <h1 class="contentTitle" id="t2">説明会</h1>
+      <p>シンポジウムへの参加、研究の進め方について説明会を行います。</p>
+      <ul>
+        <li>日時 ： 7月3日(木)5限、7月11日(金)5限</li>
+        <li>場所 ： 吉田南1号館1共23教室</li>
+      </ul>
     </div>
     <div class="content">
       <h1 class="contentTitle" id="t0">研究の世界入門講座</h1>
