--- a/sympo2014/partials/home.html
+++ b/sympo2014/partials/home.html
@@ -37,7 +37,7 @@
     <div class="content">
       <h1 id="important-date" class="contentTitle">重要日程</h1>
       <ul>
-        <li>参加申し込み： 2014年7月末頃</li>
+        <li>参加申し込み： 2014年8月8日(金)</li>
         <li>投稿締め切り： 2014年9月末頃</li>
         <li>査読結果通知： 2014年10月初旬</li>
         <li>シンポジウム開催日： 11月21日(金)</li>
