--- a/sympo2014/partials/requirements.html
+++ b/sympo2014/partials/requirements.html
@@ -15,7 +15,7 @@
       対象者：初年次学生（主に学部1・2回生。3回生・留学生も可）<br><br>
 
       スケジュール：
-      <li>参加申し込み： 2014年7月末頃</li>
+      <li>参加申し込み： 2014年8月8日(金)</li>
       <li>投稿締め切り： 2014年9月末頃</li>
       <li>査読結果通知： 2014年10月初旬</li>
       <li>シンポジウム開催日： 11月21日(金)</li>
