--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -12,20 +12,23 @@
     <div class="content">
       <h1 class="contentTitle" id="t1">夏期集中講座</h1>
       <p>9月8日(月)から9月12日(金)の2限から4限に開講されます。</p>
+      <p>以下のテンプレートに従って、自分の研究内容を日本語2ページ以上にまとめてきてください。</p>
+      <p><a href="data/情報リテラシー基礎1B/template-ja.docx">日本語論文テンプレート</a></p>
     </div>
     <div class="content">
       <h1 class="contentTitle" id="t2">説明会</h1>
       <p>シンポジウムへの参加、研究の進め方について説明会を行います。</p>
       <ul>
-        <li>日時 ： 7月3日(木)5限、7月11日(金)5限</li>
-        <li>場所 ： 吉田南1号館1共23教室</li>
+        <li>日時 : 7月3日(木)5限、7月11日(金)5限</li>
+        <li>場所 : 吉田南1号館1共23教室</li>
+        <li>資料 : <a href="data/説明会/科学的手法まとめ.pdf">科学的手法まとめ</a>
       </ul>
     </div>
     <div class="content">
       <h1 class="contentTitle" id="t0">研究の世界入門講座</h1>
       <div>
-        <p>会場 ： 吉田南一号館 1共23教室 (第1〜3回は1共25教室)</p>
-        <p>時間 ： 18時15分 ～ 19時45分</p>
+        <p>会場 : 吉田南一号館 1共23教室 (第1〜3回は1共25教室)</p>
+        <p>時間 : 18時15分 ～ 19時45分</p>
         <ol>
           <li>
             <div>
