--- a/sympo2014/partials/about.html
+++ b/sympo2014/partials/about.html
@@ -5,55 +5,67 @@
         <li><a ng-click="scrollTo('t0')">趣旨・理念</a></li>
         <li><a ng-click="scrollTo('t1')">当日の内容</a></li>
         <li><a ng-click="scrollTo('t2')">昨年の様子</a></li>
+        <li><a ng-click="scrollTo('proceedings')">論文集</a></li>
         <li><a ng-click="scrollTo('t4')">リンク</a></li>
-        </ul>
+      </ul>
     </div>
   </div>
-  
-    <div id="right_contentWrapper">
-        <div class="content">
+
+  <div id="right_contentWrapper">
+    <div class="content">
       <h1 class="contentTitle" id="t0">趣旨・理念</h1>
-          <p>京都大学では、2010年度より<strong>初年次（1，2回生）教育プログラム</strong>が試行されました。その背景には、近年の高等教育機関をめぐる環境の変化があります。</p>
-          <p>近年、教育のユニバーサル化が進み、高等教育機関に進学する学生の量は増えた反面、彼らの学力の質が保証されているとは言えず、大学教育の充実が急務となっています。 アメリカで導入された初年次教育ですが、日本の大学でもすでに効果を上げた例が多く報告され、本学でもよりよいプログラムが検討されています。</p>
-          <p>このシンポジウムは、初年次教育の一環として、探究心と深い教養、ひろい視野を持った学生の支援をめざして始められました。学部初年次から、主体的な知的欲求に基づいて<strong>自由なテーマ</strong>で研究し、論文執筆・口頭発表までを英語で経験することで、<strong>国際的に活躍する人材</strong>が育成できればと考えています。</p>
-        </div>
+      <p>京都大学では、2010年度より<strong>初年次（1，2回生）教育プログラム</strong>が試行されました。その背景には、近年の高等教育機関をめぐる環境の変化があります。</p>
+      <p>近年、教育のユニバーサル化が進み、高等教育機関に進学する学生の量は増えた反面、彼らの学力の質が保証されているとは言えず、大学教育の充実が急務となっています。 アメリカで導入された初年次教育ですが、日本の大学でもすでに効果を上げた例が多く報告され、本学でもよりよいプログラムが検討されています。</p>
+      <p>このシンポジウムは、初年次教育の一環として、探究心と深い教養、ひろい視野を持った学生の支援をめざして始められました。学部初年次から、主体的な知的欲求に基づいて<strong>自由なテーマ</strong>で研究し、論文執筆・口頭発表までを英語で経験することで、<strong>国際的に活躍する人材</strong>が育成できればと考えています。</p>
+    </div>
     <div class="content">
       <h1 class="contentTitle" id="t1">当日の内容</h1>
-          <p>シンポジウム当日は、<strong>論文投稿者による英語でのプレゼンテーション</strong>が行われます。
-            発表は５分間の口頭発表、それに続く５分間の質疑応答で構成され、<strong>来場者は自由に質問</strong>をすることができます。
-            質疑も英語で行われます。</p>
-          <p>発表終了後は、論文投稿者、来場者の方々の<strong>懇親会</strong>を企画しています。
-            ５分間の発表、質疑応答時間では語り尽くせない研究の話、論文投稿者と来場者、論文投稿者同士の交流ができればと考えています。</p>
-          <ul>
-            <li><a href="eventInfo.html">当日の案内はこちら</a></li>
-          </ul>
-        </div>
-        <div class="content">
-          <h1 class="contentTitle" id="t2">昨年の様子<span><a href="http://www.viz.media.kyoto-u.ac.jp/sympo2011">詳細はこちら</a></span></h1>
-          <!-- <ul>
+      <p>シンポジウム当日は、<strong>論文投稿者による英語でのプレゼンテーション</strong>が行われます。
+      発表は５分間の口頭発表、それに続く５分間の質疑応答で構成され、<strong>来場者は自由に質問</strong>をすることができます。
+      質疑も英語で行われます。</p>
+      <p>発表終了後は、論文投稿者、来場者の方々の<strong>懇親会</strong>を企画しています。
+      ５分間の発表、質疑応答時間では語り尽くせない研究の話、論文投稿者と来場者、論文投稿者同士の交流ができればと考えています。</p>
+      <ul>
+        <li><a href="eventInfo.html">当日の案内はこちら</a></li>
+      </ul>
+    </div>
+    <div class="content">
+      <h1 class="contentTitle" id="t2">昨年の様子<span><a href="http://www.viz.media.kyoto-u.ac.jp/sympo2011">詳細はこちら</a></span></h1>
+      <!-- <ul>
             <li>投稿された論文</li>
             <li>フォトギャラリー</li>
             <li>口頭発表映像</li>
             <li>論文投稿者の声</li>
           </ul> -->
-          <iframe width="420" height="315" src="http://www.youtube.com/embed/YJ3ieC2qj7Q" frameborder="0" allowfullscreen></iframe><br>
-          <strong>皆様の参加をお待ちしております！</strong>
-        </div>
-        <!-- 
+      <iframe width="420" height="315" src="http://www.youtube.com/embed/YJ3ieC2qj7Q" frameborder="0" allowfullscreen></iframe><br>
+      <strong>皆様の参加をお待ちしております！</strong>
+    </div>
+    <!-- 
         <div class="content">
       <h1 class="contentTitle" id="t1">参加者の皆様へ</h1>
       <p>このシンポジウムでは、初年次（主に1、2回生。3回生・留学生も可）の京大生を対象に、調査・論文執筆・口頭発表をめざして研究してもらいます。一連の作業は、国際共通語である英語で行います。テーマは自由です。
       授業やポケゼミで学んだことも活かしながら、独自の視点で研究してください。特に優れた論文は、歴史ある時計台記念館100周年記念ホールにて、11月22日（木）に口頭発表していただきます。</p>
     </div>
     -->
-        <div class="content">
+
+    <div class="content">
+      <h1 class="contentTitle" id="proceedings">論文集</h1>
+      <ul>
+        <li><a href="data/proceedings/proceedings2010.pdf"><u>第一回全学共通教育国際学生シンポジウム</u></a></li>
+        <li><a href="data/proceedings/proceedings2011.pdf"><u>第二回全学共通教育国際学生シンポジウム</u></a></li>
+        <li><a href="data/proceedings/proceedings2012.pdf"><u>第三回全学共通教育国際学生シンポジウム</u></a></li>
+        <li><a href="data/proceedings/proceedings2013.pdf"><u>第四回全学共通教育国際学生シンポジウム</u></a></li>
+      </ul>
+    </div>
+
+    <div class="content">
       <h1 class="contentTitle" id="t4">リンク</h1>
-          <ul>
+      <ul>
         <li><a href="http://www.viz.media.kyoto-u.ac.jp/sympo2010"><u>第一回全学共通教育国際学生シンポジウム</u></a></li>
         <li><a href="http://www.viz.media.kyoto-u.ac.jp/sympo2011"><u>第二回全学共通教育国際学生シンポジウム</u></a></li>
         <li><a href="http://www.viz.media.kyoto-u.ac.jp/sympo2012"><u>第三回全学共通教育国際学生シンポジウム</u></a></li>
         <li><a href="http://www.viz.media.kyoto-u.ac.jp/sympo2013"><u>第四回全学共通教育国際学生シンポジウム</u></a></li>
-          </ul>
-        </div>
+      </ul>
     </div>
+  </div>
 </div>
