Update information literacy 1b

--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -12,8 +12,80 @@
     <div class="content">
       <h1 class="contentTitle" id="t1">夏期集中講座</h1>
       <p>9月8日(月)から9月12日(金)の2限から4限に開講されます。</p>
-      <p>以下のテンプレートに従って、自分の研究内容を日本語2ページ以上にまとめてきてください。</p>
-      <p><a href="data/情報リテラシー基礎1B/template-ja.docx">日本語論文テンプレート</a></p>
+      <p>午前中は、科学的方法や統計分析の方法に関する講義、午後は英文論文執筆に関する講義です。</p>
+      <p><a href="https://sites.google.com/site/2014qingbaoriterashijichu1b">講義資料等</a></p>
+      <ol>
+        <li>
+          <div>
+            <h3>9月8日目午前</h3>
+            <p>科学的方法について</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月8日目午後</h3>
+            <p>Abstractの書き方</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月9日目午前</h3>
+            <p>Excelによる回帰分析</p>
+          </div>
+          <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+        </li>
+        <li>
+          <div>
+            <h3>9月9日目午後</h3>
+            <p>Excelによるデータ処理(VBA入門)</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月10日目午前</h3>
+            <p>科学的方法について</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月10日目午後</h3>
+            <p>Methodの書き方</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月11日目午前</h3>
+            <p>統計的検定とグラフ表現について</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月11日目午後</h3>
+            <p>ResultとDiscussionの書き方</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月12日目午前</h3>
+            <p>変数削減法のVBAプログラミング</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>9月12日目午後</h3>
+            <p>TitleとConclusionの書き方</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
+      </ol>
     </div>
     <div class="content">
       <h1 class="contentTitle" id="t2">説明会</h1>
