Update information literacy 1b

--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -19,63 +19,63 @@
           <div>
             <h3>9月8日目午前</h3>
             <p>科学的方法について</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/mLSLPcQVG-8" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
             <h3>9月8日目午後</h3>
             <p>Abstractの書き方</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/xb4m7lm4sVU" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
             <h3>9月9日目午前</h3>
             <p>Excelによる回帰分析</p>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/3LbKwX5F54g" frameborder="0" allowfullscreen></iframe>
           </div>
-          <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
         </li>
         <li>
           <div>
             <h3>9月9日目午後</h3>
             <p>Excelによるデータ処理(VBA入門)</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/iQJt5zhNlPM" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
             <h3>9月10日目午前</h3>
             <p>科学的方法について</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/5aWG2tODsyM" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
             <h3>9月10日目午後</h3>
             <p>Methodの書き方</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/trozZ_wjogM" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
             <h3>9月11日目午前</h3>
             <p>統計的検定とグラフ表現について</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/XHoMfLeFQMw" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
             <h3>9月11日目午後</h3>
             <p>ResultとDiscussionの書き方</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/mr0X5k-okek" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
             <h3>9月12日目午前</h3>
             <p>変数削減法のVBAプログラミング</p>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/dpKpMdBZuxI" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
