--- a/sympo2014/partials/submit.html
+++ b/sympo2014/partials/submit.html
@@ -17,7 +17,7 @@
 
 
       登録・投稿先はこちら：<a href="http://www.viz.media.kyoto-u.ac.jp/ojs"><u>全学共通教育国際学生シンポジウムOJSシステム</u></a><br>
-      登録・投稿マニュアル(動画)：<a href="#t2"><u>投稿者登録マニュアル</u></a><br><br>
+      登録・投稿マニュアル(動画)：<a ng-click="scrollTo('t2')"><u>投稿者登録マニュアル</u></a><br><br>
 
       <h1 id="t0" class="contentTitle">論文のフォーマット</h1>
       <p>
@@ -61,13 +61,13 @@
       <h1 id="t2" class="contentTitle">OJSの使用マニュアル</h1>
       <h2> OJSの使い方</h2>
       <ul>
-        <li><strong>著者登録</strong>(動画が表示されない場合は<a href="http://www.youtube.com/watch?v=72wtNbOCA1s">クリック</a>)
-        <iframe width="640" height="355" src="http://www.youtube.com/embed/72wtNbOCA1s?rel=0&amp;hd=1"> </iframe>
+        <li><strong>著者登録</strong>(動画が表示されない場合は<a href="https://www.youtube.com/watch?v=p18gWHxyAJg">クリック</a>)
+        <iframe width="560" height="315" src="//www.youtube.com/embed/p18gWHxyAJg" frameborder="0" allowfullscreen></iframe>
         <br>
         <br>
         </li>
-        <li><strong>論文投稿</strong>(動画が表示されない場合は<a href="http://www.youtube.com/watch?v=9j5_QexVITc">クリック</a>)
-        <iframe width="640" height="355" src="http://www.youtube.com/v/9j5_QexVITc?fs=1&amp;hl=ja_JP&amp;hd=1"> </iframe>
+        <li><strong>論文投稿</strong>(動画が表示されない場合は<a href="https://www.youtube.com/watch?v=8OpmsiwjpuQ">クリック</a>)
+        <iframe width="560" height="315" src="//www.youtube.com/embed/8OpmsiwjpuQ" frameborder="0" allowfullscreen></iframe>
         <br>
         <br>
         </li>
