--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -2,6 +2,7 @@
   <div id="left_sidebar">
     <div id="left_nav">
       <ul>
+        <li><a ng-click="scrollTo('t3')"> 口頭発表講座</a></li>
         <li><a ng-click="scrollTo('t1')"> 夏期集中講座</a></li>
         <li><a ng-click="scrollTo('t2')"> 説明会</a></li>
         <li><a ng-click="scrollTo('t0')"> 研究の世界入門講座</a></li>
@@ -10,6 +11,17 @@
   </div>
   <div id="right_contentWrapper">
     <div class="content">
+      <h1 class="contentTitle" id="t2">口頭発表講座</h1>
+      <p>ボルスタッド先生を講師としてお招きし、英語でのプレゼンテーションのポイントやテクニックを学ぶ講義です。</p>
+      <p>10月29日から全4回、毎週水曜日の6限目に吉田南1号館1共25教室で行われます。</p>
+      <ol>
+        <li>
+          <div>
+            <h3>10月29日</h3>
+          </div>
+        </li>
+    </div>
+    <div class="content">
       <h1 class="contentTitle" id="t1">夏期集中講座</h1>
       <p>9月8日(月)から9月12日(金)の2限から4限に開講されます。</p>
       <p>午前中は、科学的方法や統計分析の方法に関する講義、午後は英文論文執筆に関する講義です。</p>
@@ -17,70 +29,70 @@
       <ol>
         <li>
           <div>
-            <h3>9月8日目午前</h3>
+            <h3>9月8日午前</h3>
             <p>科学的方法について</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/mLSLPcQVG-8" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月8日目午後</h3>
+            <h3>9月8日午後</h3>
             <p>Abstractの書き方</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/xb4m7lm4sVU" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月9日目午前</h3>
+            <h3>9月9日午前</h3>
             <p>Excelによる回帰分析</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/3LbKwX5F54g" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月9日目午後</h3>
+            <h3>9月9日午後</h3>
             <p>Excelによるデータ処理(VBA入門)</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/iQJt5zhNlPM" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月10日目午前</h3>
+            <h3>9月10日午前</h3>
             <p>科学的方法について</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/5aWG2tODsyM" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月10日目午後</h3>
+            <h3>9月10日午後</h3>
             <p>Methodの書き方</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/trozZ_wjogM" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月11日目午前</h3>
+            <h3>9月11日午前</h3>
             <p>統計的検定とグラフ表現について</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/XHoMfLeFQMw" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月11日目午後</h3>
+            <h3>9月11日午後</h3>
             <p>ResultとDiscussionの書き方</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/mr0X5k-okek" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月12日目午前</h3>
+            <h3>9月12日午前</h3>
             <p>変数削減法のVBAプログラミング</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/dpKpMdBZuxI" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
         <li>
           <div>
-            <h3>9月12日目午後</h3>
+            <h3>9月12日午後</h3>
             <p>TitleとConclusionの書き方</p>
             <iframe width="560" height="315" src="//www.youtube.com/embed/WY0h1TQ-Iiw" frameborder="0" allowfullscreen></iframe>
           </div>
