Update class archive

--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -18,6 +18,7 @@
         <li>
           <div>
             <h3>10月29日</h3>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/AvNuhfFAWR8" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
     </div>
