--- a/sympo2014/partials/class-archive.html
+++ b/sympo2014/partials/class-archive.html
@@ -21,6 +21,12 @@
             <iframe width="560" height="315" src="//www.youtube.com/embed/AvNuhfFAWR8" frameborder="0" allowfullscreen></iframe>
           </div>
         </li>
+        <li>
+          <div>
+            <h3>11月12日</h3>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/-L5b3JoVsaI" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </li>
     </div>
     <div class="content">
       <h1 class="contentTitle" id="t1">夏期集中講座</h1>
